Hide lock icon in OOBE status tray wifi icon.

We have hidden the lock icon badge in the status tray to avoid visual
clutter, but the logic was not applied on dark color icons in OOBE.


Test: manual test by connecting to an encrypted wifi access point at OOBE
Bug: 874012
Change-Id: I529591faeba8febfce918dd400cc3d230da58658
Reviewed-on: https://chromium-review.googlesource.com/1177081
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584995}
Former-commit-id: 0062d38517b1eb6316fcee094fb4bf75163b0e39